--- a/templates/object_update_base.html
+++ b/templates/object_update_base.html
@@ -18,7 +18,11 @@
             {% block update_form %}
             {% endblock update_form %}
             <div class="text-end pe-3">
-              <button type="submit" class="btn btn-success" onclick="return confirmationDialog('Save the update?');"><i class="bi bi-floppy"></i> Save</button>
+              <button type="submit"
+                      class="btn btn-sm btn-success"
+                      onclick="return confirmationDialog('Save the update?');">
+                <i class="bi bi-floppy"></i> Save
+              </button>
             </div>
           </form>
         {% endblock panel_content %}
