--- a/item/templates/stock/stock_list.html
+++ b/item/templates/stock/stock_list.html
@@ -11,7 +11,7 @@
 {% endblock panel_actions %}
 {% block panel_content %}
   <div class="table-responsive">
-    <table class="table table-sm">
+    <table class="table table-sm table-hover">
       <thead>
         <tr>
           <th>Item</th>
@@ -40,15 +40,15 @@
             </td>
             <td class="text-end overflow-wrap-hidden max-width-75px">{% include "usage/usage_htmx_updated.html" %}</td>
             <td>{{ stock.lot_number }}</td>
-            <td class="d-none d-lg-table-cell">{{ stock.expiry_date|date:'d/m/Y' }}</td>
-            <td class="d-none d-lg-table-cell">
+            <td class="d-none d-lg-table-cell small">{{ stock.expiry_date|date:'d/m/Y' }}</td>
+            <td class="d-none d-lg-table-cell small">
               <a href="{% url 'delivery_detail' stock.delivery.pk %}"
                  title="{{ stock.delivery }}"
                  data-bs-toggle="tooltip">{{ stock.delivery.delivery_date|date:'d/m/Y' }}</a>
               {% delivery_condicon stock.delivery_condition %}
             </td>
             <td class="ps-lg-4">
-              <a href=" {% if stock.validations|length %}{% url 'validation_detail' 'stock' stock.pk %}{% else %}javascript:{% endif %}">
+              <a href="{% if stock.validations|length %}{% url 'validation_detail' 'stock' stock.pk %}{% else %}javascript:{% endif %}">
               {% validation_status stock.validations.0.status %}</a>
             </td>
             <td class="d-none d-lg-table-cell small">
