--- a/item/templates/validation/validation_create.html
+++ b/item/templates/validation/validation_create.html
@@ -5,11 +5,18 @@
 {% block panel_title %}
     Validation
 {% endblock panel_title %}
-{% block panel_content %}
-    {{ object_to_validate }}
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Submit" />
-    </form>
-{% endblock panel_content %}
+{% block create_form %}
+    <div class="px-3 pt-3">
+        <span class="text-danger">{{ form.non_field_errors }}</span>
+        <div id="div_id_status" class="input-group mb-3">
+            <span class="input-group-text input-group-text-fw-sm">Status</span>
+            {{ form.status }}
+        </div>
+        <span class="text-danger">{{ form.status.errors }}</span>
+        <div id="div_id_comments" class="input-group mb-3">
+            <span class="input-group-text input-group-text-fw-sm">comments</span>
+            {{ form.comments }}
+        </div>
+        <span class="text-danger">{{ form.comments.errors }}</span>
+    </div>
+{% endblock create_form %}
