--- a/templates/partials/object_delete_form.html
+++ b/templates/partials/object_delete_form.html
@@ -15,8 +15,8 @@
       <input type="hidden" name="next" value="{{ request.GET.next }}">
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-      <button type="submit" class="btn btn-danger">Delete</button>
+      <button type="button" class="btn btn-sm btn-success" data-bs-dismiss="modal">Cancel</button>
+      <button type="submit" class="btn btn-sm btn-danger">Delete</button>
     </div>
   </form>
   
