listview table look

--- a/category/templates/category/category_list.html
+++ b/category/templates/category/category_list.html
@@ -10,7 +10,7 @@
 {% endblock panel_actions %}
 {% block panel_content %}
   <div class="table-responsive">
-    <table class="table">
+    <table class="table table-sm table-hover">
       <thead>
         <tr>
           <th width="15%">Categories</th>
