--- a/company/templates/company/company_list.html
+++ b/company/templates/company/company_list.html
@@ -10,14 +10,14 @@
 {% endblock panel_actions %}
 {% block panel_content %}
   <div class="table-responsive pt-3">
-    <table class="table">
+    <table class="table table-sm table-hover">
       <thead>
         <tr>
           <th width="20%">Company</th>
           <th width="25%" class="d-none d-lg-table-cell">Description</th>
           <th class="text-center d-none d-lg-table-cell">Manufactured</th>
           <th class="text-center d-none d-lg-table-cell">Supplied</th>
-          <th class="text-center d-lg-table-cell">Phone</th>
+          <th class="ps-3 d-lg-table-cell">Phone</th>
           <th>Website</th>
           <th width="5%" class=" d-lg-table-cell">Actions</th>
         </tr>
@@ -35,7 +35,7 @@
             <td class="text-center d-none d-lg-table-cell">
               <span><a href="{% url 'company_detail' company.pk %}#supplied">{{ company.supplied_items.count|default:"" }}</a></span>
             </td>
-            <td class="text-center d-lg-table-cell">{{ company.phone }}</td>
+            <td class="ps-3 d-lg-table-cell">{{ company.phone }}</td>
             <td>
               <a href="{{ company.website }}"
                  title="Visit {{ company.website }}"
