stock in use date

--- a/category/templates/category/category_detail.html
+++ b/category/templates/category/category_detail.html
@@ -39,10 +39,10 @@
       <table class="table table-sm">
         <thead>
           <tr>
-            <th scope="col" width="25%">Name</th>
-            <th scope="col" width="20%">Manufacturer</th>
-            <th scope="col" width="20%">Supplier</th>
-            <th scope="col" width="35%">Description</th>
+            <th width="25%" class="text-muted">Name</th>
+            <th width="20%" class="text-muted">Manufacturer</th>
+            <th width="20%" class="text-muted">Supplier</th>
+            <th width="35%" class="text-muted">Description</th>
           </tr>
         </thead>
         {% for item in page_obj %}
