--- a/location/templates/location/location_detail.html
+++ b/location/templates/location/location_detail.html
@@ -42,12 +42,12 @@
       <table class="table table-sm">
         <thead>
           <tr>
-            <th>Received</th>
-            <th>Sotck Item</th>
-            <th>Lot Number</th>
-            <th>Box ID</th>
-            <th>Expiry Date</th>
-            <th>Stock Level</th>
+            <th class="text-muted">Received</th>
+            <th class="text-muted">Sotck Item</th>
+            <th class="text-muted">Lot Number</th>
+            <th class="text-muted">Box ID</th>
+            <th class="text-muted">Expiry Date</th>
+            <th class="text-muted">Stock Level</th>
           </tr>
         </thead>
         {% for stock in page_obj %}
