consolidate attachment templates

--- a/attachment/templates/attachment/attachment_delete_form.html
+++ b/attachment/templates/attachment/attachment_delete_form.html
@@ -1,5 +1,5 @@
 <form method="post"
-      action="{% url 'delivery_attachment_delete' attachment.id %}">
+      action="{% url action_url_name attachment.id %}">
   <div class="modal-header">
     <h5 class="modal-title">Confirm Deletion</h5>
     <button type="button"
