--- a/attachment/templates/attachment/attachment_update_form.html
+++ b/attachment/templates/attachment/attachment_update_form.html
@@ -1,5 +1,5 @@
 <form method="post"
-      action="{% url 'item_attachment_update' attachment.id %}">
+      action="{% url action_url_name attachment.id %}">
   {% csrf_token %}
   <div class="modal-header">
     <h5 class="modal-title">Edit Document</h5>
