clean up attachment_update/upload templates

--- a/attachment/templates/attachment/attachment_update_form.html
+++ b/attachment/templates/attachment/attachment_update_form.html
@@ -1,5 +1,4 @@
-<form method="post"
-      action="{% url action_url_name attachment.id %}">
+<form method="post" action="{% url action_url_name attachment.id %}">
   {% csrf_token %}
   <div class="modal-header">
     <h5 class="modal-title">Edit Document</h5>
@@ -10,24 +9,16 @@
   </div>
   <div class="modal-body">
     <div class="input-group mb-3">
-      <span class="input-group-text">File Name</span>
+      <span class="input-group-text input-group-text-fw-sm">File Name</span>
       <div class="form-control">{{ attachment.filename }}</div>
     </div>
     <div class="input-group mb-3">
-      <span class="input-group-text">Name</span>
-      <input class="form-control {% if form.name.errors %}is-invalid{% endif %}"
-             type="text"
-             name="name"
-             maxlength="125"
-             id="id_name"
-             value="{{ attachment.name }}">
+      <span class="input-group-text input-group-text-fw-sm">{{ form.name.label_tag }}</span>
+      {{ form.name }}
     </div>
     <div class="input-group mb-3">
-      <span class="input-group-text">Description</span>
-      <textarea class="form-control {% if form.description.errors %}is-invalid{% endif %}"
-                name="description"
-                id="id_description"
-                value="{{ attachment.description }}"></textarea>
+      <span class="input-group-text input-group-text-fw-sm">{{ form.description.label_tag }}</span>
+      {{ form.description }}
     </div>
     <div class="text-end pt-2">
       <button class="btn btn-success" type="submit">Save</button>
