--- a/attachment/templates/attachment/attachment_upload_form.html
+++ b/attachment/templates/attachment/attachment_upload_form.html
@@ -1,6 +1,4 @@
-<form method="post"
-      enctype="multipart/form-data"
-      action="{{ upload_url }}">
+<form method="post" enctype="multipart/form-data" action="{{ upload_url }}">
   {% csrf_token %}
   <div class="modal-header">
     <h5 class="modal-title">Upload a Document</h5>
@@ -14,16 +12,12 @@
       <input class="form-control" type="file" name="file" required="" id="id_file">
     </div>
     <div class="input-group mb-3">
-      <span class="input-group-text">Name</span>
-      <input class="form-control"
-             type="text"
-             name="name"
-             maxlength="125"
-             id="id_name">
+      <span class="input-group-text input-group-text-fw-sm">{{ form.name.label_tag }}</span>
+      {{ form.name }}
     </div>
     <div class="input-group mb-3">
-      <span class="input-group-text">Description</span>
-      <textarea class="form-control" name="description" id="id_description"></textarea>
+      <span class="input-group-text input-group-text-fw-sm">{{ form.description.label_tag }}</span>
+      {{ form.description }}
     </div>
     <div class="text-end pt-2">
       <button class="btn btn-success" type="submit">Save</button>
